# solarinsport-lead-gen

./: .env.example  CLAUDE.md  claude.txt  nixpacks.toml  pyproject.toml  railway.json  vercel.json
.claude/agents/: implementer.md  planner.md  reviewer.md  security-tester.md
docs/superpowers/plans/: 2026-04-09-solar-sport-outreach-engine.md  2026-04-10-solar-sport-v1.md
frontend/: .env.production  README.md  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/pages/: DashboardPage.tsx  LeadDetailPage.tsx  LeadListPage.tsx  OutreachQueuePage.tsx
src/solar_sport/: __init__.py  cli.py  config.py  database.py  models.py  schemas.py
src/solar_sport/api/: app.py  dashboard.py  deps.py  leads.py  outreach.py
src/solar_sport/discovery/: pipeline.py  wikipedia.py
src/solar_sport/enrichment/: pipeline.py  scraper.py
src/solar_sport/outreach/: generator.py  templates.py
src/solar_sport/scoring/: engine.py
src/solar_sport_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: call_script.jinja2  cold_email.jinja2  followup_1.jinja2  followup_2.jinja2  linkedin_message.jinja2
tests/: conftest.py  test_api.py  test_config.py  test_discovery.py  test_e2e.py  test_enrichment.py  test_models.py  test_outreach.py  test_scoring.py
